# ed-notification

./: package.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: package.py
src/application/contracts/infrastructure/message_queue/: abc_subscriber.py
src/application/contracts/infrastructure/persistence/: abc_notification_repository.py  abc_unit_of_work.py
src/application/features/notification/dtos/: __init__.py  notification_dto.py
src/application/features/notification/handlers/commands/: __init__.py  send_notification_command_handler.py  update_notification_command_handler.py
src/application/features/notification/handlers/queries/: __init__.py  get_notification_query_handler.py  get_notifications_query_handler.py
src/application/features/notification/requests/commands/: __init__.py  send_notification_command.py  update_notification_command.py
src/common/: generic_helpers.py
src/common/typing/: config.py
src/ed_notification/common/: generic_helpers.py
src/ed_notification/common/typing/: config.py
src/ed_notification/documentation/message_queue/rabbitmq/: notification_rabbitmq_subscriber.py
src/infrastructure/email/: email_sender.py
src/infrastructure/persistence/: unit_of_work.py
src/infrastructure/persistence/repositories/: generic_repository.py  mongo_generic_repository.py  notification_repository.py
src/infrastructure/rabbitmq/: producer.py  subscriber.py
src/infrastructure/sms/: sms_sender.py
src/webapi/: api.py  dependency_setup.py
src/webapi/controllers/: notification_controller.py
(+4 files in other folders)
