[tool.poetry]
name = "ed-notification"
version = "0.1.15"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.7"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
resend = "^2.5.1"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
ed-domain = "^0.3.25"
ed-infrastructure = "0.2.7"
jsons = "^1.6.3"
twine = "^6.1.0"
faststream = {extras = ["rabbit"], version = "^0.5.42"}


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"
mypy = "^1.15.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
